--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,8 +22,8 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: eu-central-1
 
-    - name: Who am I?
-      run: aws sts get-caller-identity
+    - name: Bucket name
+      run: echo $S3_BUCKET
 
     - name: Sync to S3
       run: aws s3 sync . "$S3_BUCKET" --delete
